Added setShooter parameter to some projectile powers Fixed shulker bullet power failed working if no target selected